--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 
     <style type="text/css">
         #mynetwork {
-            width: 600px;
-            height: 400px;
-            border: 1px solid lightgray;
+            width: 50%;
+            height: 100%;
         }
     </style>
 </head>
